--- a/.github/workflows/main_angular45.yml
+++ b/.github/workflows/main_angular45.yml
@@ -24,8 +24,8 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        npm run build --if-present
-        npm run test --if-present
+        node server
+        
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
@@ -51,6 +51,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'angular45'
-        slot-name: 'production'
+        
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_6364ac7205c342c5bdacdb93889d561d }}
-        package: .
+        package: ./dist/server
