--- a/.github/workflows/main_angular45.yml
+++ b/.github/workflows/main_angular45.yml
@@ -24,7 +24,7 @@ jobs:
     - name: npm install, build, and test
       run: |
         npm install
-        node server
+        npm run start:server
         
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
