--- a/package.json
+++ b/package.json
@@ -1,21 +1,30 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "ng-app",
+  "version": "0.0.0",
   "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "watch": "ng build --watch --configuration development",
+    "test": "ng test",
+    "start:server": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "private": true,
   "dependencies": {
-    "body": "^5.1.0",
-    "cors": "^2.8.5",
+    "bcrypt": "^5.0.1",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
-    "parser": "^0.1.4"
+    "mongoose-unique-validator": "^2.0.3",
+    "ngx-toastr": "^14.1.3",
+    "rxjs": "~6.6.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4",
+    "cors": "^2.8.5"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.12",
+    "typescript": "~4.3.5"
   }
 }
