--- a/package.json
+++ b/package.json
@@ -1,42 +1,20 @@
 {
-  "name": "ng-app",
-  "version": "0.0.0",
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "start:server": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "private": true,
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
+    "body": "^5.1.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.5",
-    "mongoose-unique-validator": "^2.0.3",
-    "ngx-toastr": "^14.1.3",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "cors": "^2.8.5"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.5",
-    "@angular/cli": "~12.2.5",
-    "@angular/compiler-cli": "~12.2.0",
-    "@types/jasmine": "~3.8.0",
-    "@types/node": "^12.11.1",
-    "demon": "^1.4.4",
-    "jasmine-core": "~3.8.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "nodemon": "^2.0.12",
-    "typescript": "~4.3.5"
+    "parser": "^0.1.4"
   }
 }
