--- a/.github/workflows/main_cloudbackend1.yml
+++ b/.github/workflows/main_cloudbackend1.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - uses: actions/checkout@v2
@@ -19,12 +19,13 @@ jobs:
     - name: Set up Node.js version
       uses: actions/setup-node@v1
       with:
-        node-version: '12.x'
+        node-version: '12.13.0'
 
     - name: npm install, build, and test
       run: |
         npm install
-        
+        npm run build --if-present
+        npm run test --if-present
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
@@ -33,7 +34,7 @@ jobs:
         path: .
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     environment:
       name: 'production'
@@ -50,5 +51,6 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'cloudbackend1'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_362c842042de423eb9c5daaea505851a }}
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_cfedf03857d542adb7dab9ebc434d83a }}
         package: .
