--- a/.github/workflows/main_cloudbackend1.yml
+++ b/.github/workflows/main_cloudbackend1.yml
@@ -25,7 +25,6 @@ jobs:
       run: |
         npm install
         npm run build --if-present
-        npm run test --if-present
 
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v2
@@ -51,6 +50,5 @@ jobs:
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'cloudbackend1'
-        slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_cfedf03857d542adb7dab9ebc434d83a }}
-        package: .
+        package: ./dist/cloudbackend1
